--- a/public/_partials/footer.jade
+++ b/public/_partials/footer.jade
@@ -1,11 +1,26 @@
-| Powered by
-= ' '
-a(href="https://github.com/jvandemo/hb-bootstrap") hb-bootstrap
-= ' '
-| for
-= ' '
-a(href="http://harpjs.com") Harp
-= ' '
-| by
-= ' '
-a(href="http://www.jvandemo.com") Jurgen Van de Moere
+div.container
+  div.row
+    div.col-sm-4
+      p Contact
+      hr
+      p
+        | Email: contact@marula.io
+        br
+        | Tel: +27 82 487 5758
+        br
+        a(href="https://twitter.com/marula_io") @marula_io
+    div.col-sm-4
+      img.logo-footer(src="/images/logo.png" alt="")
+    div.col-sm-4.address
+      p Address
+      hr
+      p
+        | 21 Ryneveld Plaza
+        br
+        | Ryneveld Street
+        br
+        | Stellenbosch
+        br
+        | South Africa
+        br
+        |7600
