--- a/public/css/themes/sandstone/_variables.less
+++ b/public/css/themes/sandstone/_variables.less
@@ -15,7 +15,7 @@
 
 @brand-primary:         #325D88;
 @brand-secondary:       #FFB056;
-@brand-success:         #93C54B;
+@brand-success:         @gray-darker;
 @brand-info:            #29ABE0;
 @brand-warning:         #F47C3C;
 @brand-danger:          #d9534f;
