--- a/public/_partials/head.jade
+++ b/public/_partials/head.jade
@@ -3,6 +3,8 @@ title= name
 link(href='http://fonts.googleapis.com/css?family=Raleway:700,400', rel='stylesheet', type='text/css')
 link(rel='stylesheet', href='#{baseUrl}/css/global.css')
 link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans|Source+Code+Pro')
-link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", rel="stylesheet")
+link(href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css', rel='stylesheet')
 script(src='#{baseUrl}/js/jquery/jquery.min.js')
 script(src='#{baseUrl}/js/bootstrap/bootstrap.js')
+script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAO5Dyr30ZfisOYzdeVcROjZD5wXKr58eo')
+script(src='#{baseUrl}/js/map.js')
