--- a/public/index.jade
+++ b/public/index.jade
@@ -1,80 +1,51 @@
-//- 
+//-
   This site is built with the Harp static generator.
-  Refer to www.harpjs.com for more info/docs. (Rick)
+  Refer to www.harpjs.com for more info/docs.
 
-  NOTE: Make sure you turn on WORD WRAP in this file, whatever editor you are
-  using, or you are going to have a bad time. (Carl)
 
 .jumbotron
-  //img.logo-main(src="/images/logo-header.png" alt="")
+  img.logo-main(src="/images/logo.png" alt="")
   .container
     .row.text-center
       .col-sm-10.col-center
         h1 Full-Stack Web Development
         p A dedicated team of software engineers building robust solutions to suit your needs and keep you in the lead.
 
-.container
-  .row.text-center
+
+.container.text-center
+  .row
     .col-sm-4.border-box.semi-transparent
-      h1 Web Development
-      a.circle-link(href="#web")
+      h1 Backend
+      .circle-link
         div.circle
-          i.fa.fa-globe.icon-homepage
-      h4 Gone are the days of building simple websites. Clients are demanding more functionality and better results from their websites.
+          i.fa.fa-database.icon-homepage
+      h4 Your data is the core of your business. We help you protect, analyse and scale your date to millions of users.
 
     .col-sm-4.border-box.semi-transparent
-      h1 Software Solutions
-      a.circle-link(href="#cloud")
+      h1 Server Side
+      .circle-link
         div.circle
-          i.fa.fa-cloud.icon-homepage
-      h4 With our dedicated software development team and a little know-how, getting your web-app idea running will be a breeze.
+          i.fa.fa-server.icon-homepage
+      h4 We writing fast, maintainable well structured code, allowing us spend more time to adding features instead of fixing bugs.
 
     .col-sm-4.border-box.semi-transparent
-      h1 Mobile Apps
-      a.circle-link(href="#mobile")
+      h1 Client Side
+      .circle-link
         div.circle
           i.fa.fa-mobile.icon-homepage
-      h4 Need iPhone / Android app development for your project? We've got you covered! Click here to find out more.
-  //div.separator-small
-  .row.text-center.page-row
-    .col-sm-12.semi-transparent.padded-box
-      a.btn.btn-default.btn-lg(href="#{baseUrl}/projects") View All of our projects
-div.separator-main
+      h4 We build intuitive applications that respond instantly and interact seamlessly across web, iOS and Android environments.
 
-#web.ctr-webdev
-  div.container
-    .row
-      .col-sm-4.border-box.semi-transparent
-        h1 Web Development
-        p - Website design to suit your brand and pocket
-        p - Content Management System
-        p - Responsive Design
-        p - Client satisfaction guaranteed
-      .col-sm-8.border-box.semi-transparent
-        img.img-thumbnail.h1-inline(src= "/images/001web.png");
-div.separator-white
-#cloud.ctr-webdev
-  div.container
-    .row
-      .col-sm-8.border-box.semi-transparent
-        img.img-thumbnail.h1-inline(src= "/images/001cloud.png");
-      .col-sm-4.border-box.semi-transparent
-        h1 Sofware Solutions
-        p - Website design to suit your brand and pocket
-        p - Content Management System
-        p - Responsive Design
-        p - Client satisfaction guaranteed
+.separator-main
+  .container.text-center
+    h1 Let's talk!
+    h4 If you are in need of an engineering team for your next software project or would like to see our portfolio send us an email at:
+    h3 contact@marula.io
 
-div.separator-white
-#mobile.ctr-webdev
-  div.container
-    .row
-      .col-sm-4.border-box.semi-transparent
-        h1 Mobile Applications
-        p - Website design to suit your brand and pocket
-        p - Content Management System
-        p - Responsive Design
-        p - Client satisfaction guaranteed
-      .col-sm-8.border-box.semi-transparent
-        img.h1-inline.img-thumbnail(src= "/images/001mobile.png");
-div.separator-white
+.container
+  .row.text-center
+    .col-sm-2
+    .col-sm-8
+      h2 We're currently based in Stellenbosch.
+      hr
+
+#map
