--- a/_harp/public/index.jade
+++ b/_harp/public/index.jade
@@ -4,15 +4,17 @@
 
 
 .jumbotron
-  img.logo-main(src="/images/logo.png" alt="")
+  img.logo-main(src="/images/picture.png" alt="")
   .container
-    .row.text-center
-      .col-sm-10.col-center
-        h1 Full-Stack Web Development
-        p A dedicated team of software engineers building robust solutions to suit your needs and keep you in the lead.
 
 
 .container.text-center
+  .row
+    .col-sm-2
+    .col-sm-8
+      h1 Full-Stack Web Development
+      hr
+      p A dedicated team of software engineers building robust solutions to suit your needs and keep you in the lead.
   .row
     .col-sm-4.border-box.semi-transparent
       h1 Backend
