--- a/_harp/public/_partials/head.jade
+++ b/_harp/public/_partials/head.jade
@@ -1,5 +1,8 @@
 meta(charset='utf8')
+meta(http-equiv="X-UA-Compatible" content="IE=edge")
 title= name
+meta(name="description", content="Full Stack Web development by Marula.io in Stellenbosch South Africa.")
+meta(name="viewport", content="width=device-width, initial-scale=1")
 link(href='http://fonts.googleapis.com/css?family=Raleway:700,400', rel='stylesheet', type='text/css')
 link(rel='stylesheet', href='#{baseUrl}/css/global.css')
 link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans|Source+Code+Pro')
