--- a/_harp/public/index.jade
+++ b/_harp/public/index.jade
@@ -28,7 +28,7 @@
       .circle-link
         div.circle
           i.fa.fa-server.icon-homepage
-      h4 We writing fast, maintainable well structured code, allowing us spend more time adding features instead of fixing bugs.
+      h4 We write fast, maintainable well structured code, allowing us spend more time adding features instead of fixing bugs.
 
     .col-sm-4.border-box.semi-transparent
       h1 Client Side
