--- a/_harp/public/index.jade
+++ b/_harp/public/index.jade
@@ -21,7 +21,7 @@
       .circle-link
         div.circle
           i.fa.fa-database.icon-homepage
-      h4 Your data is the core of your business. We help you protect, analyse and scale your date to millions of users.
+      h4 Your data is the core of your business. We help you protect, analyse and scale your data to millions of users.
 
     .col-sm-4.border-box.semi-transparent
       h1 Server Side
