spelling and color and logo

--- a/_harp/public/_partials/footer.jade
+++ b/_harp/public/_partials/footer.jade
@@ -8,7 +8,7 @@ div.container
         br
         | Tel: +27 82 487 5758
         br
-        a(href="https://twitter.com/marula_io") @marula_io
+        a(href="https://twitter.com/marula_io") Twitter: @marulaweb
     div.col-sm-4
       img.logo-footer(src="/images/logo.png" alt="")
     div.col-sm-4.address
