--- a/_harp/public/css/global.less
+++ b/_harp/public/css/global.less
@@ -119,7 +119,7 @@ article.article-docs{
 // --------------------------------------------------
 
 .jumbotron{
-  background-color: @gray-darker;
+  background-color: #222222;
   color: white;
 
   font-family: @font-family-base;
@@ -150,7 +150,7 @@ footer {
   padding-top: 30px;
   padding-bottom: 30px;
 
-  background: @gray-darker;
+  background: #222222;
   color: white;
   text-align: left;
 
@@ -252,7 +252,7 @@ a.circle-link{
 div.separator-main{
   margin-top: 20px;
   padding-bottom: 20px;
-  background-color: @gray-darker;
+  background-color: #222222;
   color: white;
 }
 div.separator-white{
